--- a/game.html
+++ b/game.html
@@ -288,8 +288,8 @@
                         { x: 150, y: 400, text: "Kříž je pokřivený a bez nápisu. Místní věří, že jej postavili, aby chránil před Barbořiným vlivem." }
                     ]
                 },
-                E: { img: `https://placehold.co/${VIEWPORT_WIDTH}x${VIEWPORT_HEIGHT}/363025/d0c6ac?text=Hustý+les+a+mlha` },
-                S: { img: `https://placehold.co/${VIEWPORT_WIDTH}x${VIEWPORT_HEIGHT}/363025/d0c6ac?text=Neznačená+cesta+dolů` },
+                E: { img: `../assets/bgr/bgr_test2.png` },
+                S: { img: `../assets/bgr/bgr_test3.png` },
                 W: { img: `https://placehold.co/${VIEWPORT_WIDTH}x${VIEWPORT_HEIGHT}/363025/d0c6ac?text=Bažinatá+místa` },
             },
             "ŠtandlVrchol": {
