--- a/game.html
+++ b/game.html
@@ -387,7 +387,7 @@
 				// Hádanka u Erbu
 				puzzleModalBackdrop.style.display = 'flex';
 			} else if (currentArea === 'ŠtandlUErbu' && !inventory.includes('cerny_klic')) {
-				showPopup("Kamenný erb je na pohled masivní. V prohlubni je vidět otvor ve tvaru klíče. K jeho aktivaci potřebujete **Černý Klíč**.");
+				showPopup("Kamenný erb je na porostlý mechem. Po bližším prozkoumání je pod mechem v prohlubni vidět otvor ve tvaru klíčové dírky.");
 			} else {
 				showPopup(item.text);
 			}
