--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
 		<div id="viewport">
 			<div class="loading-overlay" id="loading-overlay">Čekání na osud...</div>
 			<div class="direction-label" id="direction-label"></div>
+			<div class="pohled-label" id="pohled-label"></div>
 			<div class="area-label" id="area-label"></div>
 		</div>
 
