--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Záhada Černé Barbory - S Inventářem</title>
+	<title>Standelstein - kámen na Štandlu</title>
 	<!-- Načtení Font Awesome pro ikony -->
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -17,7 +17,7 @@
 <body>
 
 	<div class="game-container">
-		<h1>Záhada Černé Barbory</h1>
+		<h1>Záhada Vytesané Tváře</h1>
 		<div id="viewport">
 			<div class="loading-overlay" id="loading-overlay">Čekání na osud...</div>
 			<div class="direction-label" id="direction-label"></div>
