sloup panny marie, texty

--- a/game.html
+++ b/game.html
@@ -27,16 +27,16 @@
 
 		<div class="controls-row">
 			<button class="control-button" id="turn-left" onclick="turnLeft()">
-				<i class="fas fa-hand-point-left"></i> Otočit vlevo
+				<i class="fas fa-hand-point-left"></i> Otočit se vlevo
 			</button>
 			<button class="control-button" id="move-forward" onclick="moveForward()">
 				<i class="fas fa-feather-alt"></i> Vpřed
 			</button>
 			<button class="control-button" id="turn-right" onclick="turnRight()">
-				Otočit vpravo <i class="fas fa-hand-point-right"></i>
+				Otočit se vpravo <i class="fas fa-hand-point-right"></i>
 			</button>
 		</div>
-		<p class="instruction-text">Prozkoumejte své okolí a hledejte stopy. Váš inventář je níže.</p>
+		<p class="instruction-text">Prozkoumej okolí a hledej stopy. Zde je tvůj inventář:</p>
 
 		<!-- Nový Inventář UI -->
 		<div id="inventory-display">
